--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ PyYAML>=6.0.2
 jellyfish>=1.1.3
 jinja2>=3.1.6
 schema>=0.7.7
-kivy>=2.3.1
+headless-kivy>=2.3.1
 bsdiff4>=1.2.6
 platformdirs>=4.3.6
 certifi>=2025.4.26
